--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div>
             <button class="boton"><a href="#primero" class="text-dark font-weight-bold text-decoration-none">Primer año</a></button>
-            <button> class="boton"<a href="#segundo" class="text-dark font-weight-bold text-decoration-none">Segundo año</a></button>
+            <button class="boton"><a href="#segundo" class="text-dark font-weight-bold text-decoration-none">Segundo año</a></button>
             <button class="boton"><a href="#tercero" class="text-dark font-weight-bold text-decoration-none">Tercer año</a></button>
             <button class="boton"><a href="#cuarto" class="text-dark font-weight-bold text-decoration-none">Cuarto año</a></button> 
             <button class="boton"><a href="#quinto" class="text-dark font-weight-bold text-decoration-none">Quinto año</a></button>
