--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -8,32 +8,32 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="img/logoAniversario.png" alt="Bootstrap" width="150" height="auto">
-          </a>
-        </div>
+  <nav class="navbar bg-body-tertiary espacio3">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="img/logoAniversario.png" alt="Bootstrap" width="150" height="auto">
+      </a>
+    </div>
 
-        <div>
-            <button><a href="#primero" class="text-dark font-weight-bold text-decoration-none">Primer año</a></button>
-            <button><a href="#segundo" class="text-dark font-weight-bold text-decoration-none">Segundo año</a></button>
-            <button><a href="#tercero" class="text-dark font-weight-bold text-decoration-none">Tercer año</a></button>
-            <button><a href="#cuarto" class="text-dark font-weight-bold text-decoration-none">Cuarto año</a></button> 
-            <button><a href="#quinto" class="text-dark font-weight-bold text-decoration-none">Quinto año</a></button>
-            <button><a href="quienes-somos.html" class="text-dark font-weight-bold text-decoration-none">¿Quiénes somos?</a></button>
-        </div>
-    </nav>
+    <div>
+        <button class="boton"><a href="index.html" class="text-dark font-weight-bold text-decoration-none">Primer año</a></button>
+        <button class="boton"><a href="#segundo" class="text-dark font-weight-bold text-decoration-none">Segundo año</a></button>
+        <button class="boton"><a href="#tercero" class="text-dark font-weight-bold text-decoration-none">Tercer año</a></button>
+        <button class="boton"><a href="#cuarto" class="text-dark font-weight-bold text-decoration-none">Cuarto año</a></button> 
+        <button class="boton"><a href="#quinto" class="text-dark font-weight-bold text-decoration-none">Quinto año</a></button>
+        <button class="boton"><a href="quienes-somos.html" class="text-dark font-weight-bold text-decoration-none">¿Quiénes somos?</a></button>
+    </div>
+</nav>
 
 
-    <div class="container text-center">
+    <div class="container text-center margenDiv">
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
                   <h5 class="card-title">Nazaret Marchal</h5>
                   <img src="img/quienes1.JPG" class="card-img-top" alt="..."><br>
-                  <p></p>
+                  <p class="parrafo">Panciverde de 26 años. Graduada en Historia. La oposición le parecíó un tostón y en la informática encontró una diversión, sin pensar en que el diseño web se convertiría en su profesión.</p>
                 </div>
             </div>
           </div>
@@ -44,7 +44,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Darío De Sancho</h5>
                   <img src="img/quienes2.JPG" class="card-img-top" alt="..."><br>
-                  <p></p>
+                  <p class="parrafo">Pacense de 25 años. Graduado en Historia y con dos másteres en su currículum. El rap como hobbie y el fútbol como pasión. Extremadura siempre por bandera, en su mesa nunca falta una patatera.</p>
                 </div>
             </div>
           </div>
