--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>QUINTO ANIVERSARIO D&N</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
@@ -28,13 +29,13 @@
     <div class="container text-center">
       <div class="row">
         <div class="col texto espacio1">
-          Bienvenidos a una historia de amor 100% que se cuajó allá por el 2019 entre clase y clase de Tendencias I  hasta llegar a aquel maravilloso 8 de febrero en el que por primera vez quedamos para ir a tomarnos unas tapas. A partir de ahí este amor no ha parado de crecer y crecer y nosotros con él.
+          Bienvenidos a una historia de amor 100% real que se cuajó allá por el 2019 entre clase y clase de Tendencias I  hasta llegar a aquel maravilloso 8 de febrero en el que por primera vez quedamos para ir a tomarnos unas tapas. A partir de ahí este amor no ha parado de crecer y crecer y nosotros con él.
         </div>
       </div>
   </div>
 
 
-    <h2 id="primero" class="espacio1 encabezado">PRIMER AÑO</h2>
+    <h2 id="primero" class="espacio1 encabezado color">PRIMER AÑO</h2>
 
     <div class="container text-center margen">
         <div class="row fila">
@@ -128,7 +129,7 @@
 
 
 
-    <h2 id="segundo" class="encabezado espacio2">SEGUNDO AÑO</h2>
+    <h2 id="segundo" class="encabezado espacio2 color">SEGUNDO AÑO</h2>
 
     <div class="container text-center margen">
       <div class="row fila">
@@ -250,7 +251,7 @@
   </div>
 
 
-    <h2 id="tercero" class="encabezado espacio2">TERCER AÑO</h2>
+    <h2 id="tercero" class="encabezado espacio2 color">TERCER AÑO</h2>
 
     <div class="container text-center margen">
       <div class="row fila">
@@ -401,7 +402,7 @@
 
 
 
-    <h2 id="cuarto" class="encabezado espacio2">CUARTO AÑO</h2>
+    <h2 id="cuarto" class="encabezado espacio2 color">CUARTO AÑO</h2>
 
     <div class="container text-center margen">
       <div class="row fila">
@@ -551,7 +552,7 @@
 </div>
 
 
-    <h2 id="quinto" class="encabezado espacio2">QUINTO AÑO</h2>
+    <h2 id="quinto" class="encabezado espacio2 color">QUINTO AÑO</h2>
 
     <div class="container text-center margen">
       <div class="row fila">
@@ -701,6 +702,7 @@
 </div>
 
 <section class="espacio1"></section>
+<a href="#" class="text-decoration-none iconoSubir"><i class="bi bi-arrow-up-circle"></i></a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
